# ru-remna-utils

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  grok_prompt_vps_setup.md  pyproject.toml  roll_ip.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: lint.yml
deb_server_utils/: README.md  __init__.py  cli.py  config.py
deb_server_utils/core/: __init__.py  utils.py
deb_server_utils/services/: __init__.py  traffic_guard.py  ufw.py  uv_manager.py
vps_setup/: README.md  cli.py  config.py
vps_setup/core/: __init__.py  base_service.py  executor.py  package_manager.py  utils.py
vps_setup/services/: __init__.py  bbr.py  docker.py  fail2ban.py
vps_setup/services/monitoring/: __init__.py  traffic_guard.py
vps_setup/services/security/: __init__.py  fail2ban.py  ufw.py
vps_setup/services/system/: __init__.py  ssh_hardening.py  swap.py  sysctl_optimizer.py  unattended_upgrades.py
vps_setup/services/tools/: __init__.py  docker.py  uv_manager.py
yacloud-ip-roller/: roll_ip.py
