[project]
name = "ru-remna-utils"
version = "1.0.0"
description = "Коллекция утилит для панели Remnawave"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
vps-setup = "vps_setup.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "T10",    # flake8-debugger
    "T20",    # flake8-print
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S603",   # subprocess without shell=True is safe
    "S607",   # starting process with partial path
    "S310",   # urllib.urlopen is safe for known URLs
    "T201",   # print found (это CLI утилита, print допустим)
    "RUF001", # ambiguous unicode (русский язык)
    "RUF002", # ambiguous unicode in docstrings (русский язык)
    "B008",   # typer uses function calls in defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
